--- a/src/components/flexbox-grid/flexbox-grid.css
+++ b/src/components/flexbox-grid/flexbox-grid.css
@@ -12,7 +12,7 @@
   background: #77ED9C;
   flex: 0 32%;
   height: 100px;
-  margin-bottom: 2%; /* (100-32*3)/2 */
+  margin-bottom: 2%;
 }
 
 .flex-item:nth-child(3n) {
