--- a/src/components/flexbox-nav-bar/flexbox-nav-bar.css
+++ b/src/components/flexbox-nav-bar/flexbox-nav-bar.css
@@ -2,11 +2,11 @@
   display: block;
 }
 
-:host([isPattern]) .logo {
+:host([isPattern]) .logo-container {
   background: #FFF357;
 }
 
-:host([isPattern]) .nav {
+:host([isPattern]) .nav-container {
   background: #FF8A64;
 }
 
@@ -15,25 +15,25 @@
   padding: 10px;
 }
 
-.logo {
+.logo-container {
   align-items: center;
   border: solid 1px #FFF357;
   border-radius: 5px 0 0 5px;
+  display: flex;
   height: 100px;
   justify-content: center;
   margin-right: 4px;
   width: 120px;
-  display: flex;
 }
 
 ::slotted(*[slot="logo"]) {
   color: #856E22;
 }
 
-.nav {
+.nav-container {
+  align-content: center;
   border: solid 1px #FF8A64;
   border-radius: 0 5px 5px 0;
-  align-content: center;
   flex-grow: 1;
   width: 120px;
 }
